2008-12-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.{h,m}
	Added an additional parameter to fetchFields:...
	so that we can avoid stripping relevant information.
	This is useful when verifying the freebusy of
	meeting participants as we must not strip the
	c_partstates/c_partmails fields.

2008-12-23  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-_adjustRecurrentRules]): new method to adjust the until date of a
	recurrent rule using the start time of the event.

2008-12-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added the "sent-by" field to all invitation
	update templates.

2008-12-19  Francis Lachapelle  <flachapelle@inverse.ca>

	* iCalWeeklyRecurrenceCalculator.m ([iCalDailyRecurrenceCalculator
	-recurrenceRangesWithinCalendarDateRange:_r]): rewrote method to
	handle timezones. Removed usage of julian numbers.

	* iCalDailyRecurrenceCalculator.m ([iCalWeeklyRecurrenceCalculator
	-recurrenceRangesWithinCalendarDateRange:_r]): idem. Also fixed
	the handling of intervals.

2008-12-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -userSettings]): new
	accessor method to avoid loading the user settings with an
	additional json request.
	([UIxPageFrame -userDefaults]): same as above for user defaults.

2008-12-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-lookupName:nameinContext:lookupContextacquire:acquire]): we avoid
	getting subscribed sources if not needed, which reduces the amount
	of requests to the database.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-dealloc]): we release componentCalendar here to avoid a leak
	(since if set, it was through a call to ASSIGN()).

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-setComponent:newComponent]): since componentCalendar is released